apps/personal-site/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: personal-site
  namespace: personal-site
spec:
  selector:
    app.kubernetes.io/name: personal-site
  ports:
    - name: http
      port: 80
      targetPort: http
